Prevents field zoom on iOS

--- a/src/components/enrollment/Enrollment.styl
+++ b/src/components/enrollment/Enrollment.styl
@@ -9,6 +9,7 @@
 
 .enrollment__clans
   box-shadow 0 $spacing--default $spacing--double rgba($color--black, 0.5), 0 $spacing--half $spacing--half rgba($color--black, 0.25)
+  font-size rem(14)
   position absolute
   left 0
   right 0
@@ -45,5 +46,5 @@
     background $color--white-smoke
     color $color--black !important // @stylint ignore
 
-    &:after
+    &[data-id]:after
       color $color--terracotta
