--- a/src/stylus/__components/field.styl
+++ b/src/stylus/__components/field.styl
@@ -8,7 +8,6 @@
 .field
   text-align left
   margin-bottom $spacing--default
-  font-size rem(14)
 
 .field__question
   margin-bottom rem(5)
